--- a/Data/GERP_param_map.ini
+++ b/Data/GERP_param_map.ini
@@ -5,19 +5,19 @@
 [Combobocks_Setting]
 ThkSet = 1,0 мм | 1,2 мм | 1,5 мм | 2,0 мм
 ThkCur = 1,2 мм
-CoatSet = Гарячий цинк | Сендзимир
-CoatCur = Гарячий цинк
+CoatSet = Метод занурення (HDG) | Метод Сендзимира (PG)
+CoatCur = Метод занурення (HDG) 
 TrayWidth = 3000
 
 [FamilyMap]
 # FamilyName = BaseArticle | GE_Категорія | GE_Додаткові | # Примітка
 S5_Sheet_Perforated tray = GE-KT2- | 1. Кабельні лотки | - | 
 470_DKC_S5_Accessories = GE-KTK1- | 1. Кабельні лотки | - | 
-470_DKC_S5-L5_Cover = GE-KTK1- | 1. Кабельні лотки | Кришка лотка | # Кришки на прямі ділянки лотків
+470_DKC_S5-L5_Cover = GE-KTK1- | 1. Кабельні лотки | - | # Кришки на прямі ділянки лотків
 
 # |  |  |  | 
 470_DKC_S5_Horizontal Bend_CPO45-CPO90 = GE-KT2-D | 2. З'єднувальні деталі | - | # Кут горизонтальний 45 або 90 град.
-470_DKC_S5_Horizontal Bend_CPO0-45 = GE-YDE- | 2. З'єднувальні деталі | Немає в БД | # Елемент сполучний
+470_DKC_S5_Horizontal Bend_CPO0-45 = GE-YDE- | 2. З'єднувальні деталі | - | # Елемент сполучний
 # |  |  |  | 
 470_DKC_S5_Int Vertical Bend_CS45-CS90 = GE-KT2-IB | 2. З'єднувальні деталі | - | # Кут вертикальний внутрішній 45 або 90 град.
 470_DKC_S5_Int Vertical Bend_1-89 = GE-KT2-IBF- | 2. З'єднувальні деталі | - | # Внутрішній кутовий елемент (дефолтний варіант)
@@ -27,11 +27,13 @@ S5_Sheet_Perforated tray = GE-KT2- | 1. Кабельні лотки | - |
 #
 470_DKC_S5_Horizontal Bend_Cover_CPO0-45 = - | 2. З'єднувальні деталі | ??? | # Кришка ???
 470_DKC_S5_Horizontal Bend_Cover_CPO45-CPO90 = GE-DK- | 2. З'єднувальні деталі | - | # Кришка на кут горизонтальний
-470_DKC_S5_Int Vertical Bend_Cover_CS45-CS90 = GE-IBFK- | 2. З'єднувальні деталі | - | # Кришка на кут вертикальний внутрішній 
-470_DKC_S5_Ext Vertical Bend_Cover_CD45-CD90 = GE-OBK | 2. З'єднувальні деталі |  - | # Кришка на кут вертикальний зовнішній
+470_DKC_S5_Int Vertical Bend_Cover_CS45-CS90 = GE-IBK- | 2. З'єднувальні деталі | - | # Кришка на кут вертикальний внутрішній 45 або 90 град.
+470_DKC_S5_Ext Vertical Bend_Cover_CD45-CD90 = GE-OBK- | 2. З'єднувальні деталі |  - | # Кришка на кут вертикальний зовнішній 45 або 90 град.
 #
-470_DKC_S5_Tree Bend_DPT = GE-KT2-T- | 2. З'єднувальні деталі | - | # Т-подібне відгалуження
-470_DKC_S5_Tree Bend_Cover_DPT = GE-TK- | 2. З'єднувальні деталі | - | # Кришка на Т-подібне відгалуження
+470_DKC_S5_Tee Bend_DPT = GE-KT2-T- | 2. З'єднувальні деталі | - | # Т-подібне відгалуження
+470_DKC_S5_Tee Bend_Cover_DPT = GE-TK- | 2. З'єднувальні деталі | - | # Кришка на Т-подібне відгалуження
 470_DKC_S5_Cross_DPX = GE-KT2-DB- | 2. З'єднувальні деталі | - | # Хрестоподібне відгалуження
 470_DKC_S5_Cross_Cover_DPX = GE-DBK- | 2. З'єднувальні деталі | - | # Кришка на хрестоподібне відгалуження
 470_DKC_S5_End Caps.TC = GE-SON- | 2. З'єднувальні деталі | - | # Заглушка на кабельний лоток
+470_DKC_S5_Lightweight Reducer = GE-KT2-R | 2. З'єднувальні деталі | - | # Редукція ШхШхВхТ; існують GE-KT2-R- симетрична, GE-KT2-RL- лівобічна і GE-KT2-RR- правобічна
+999_DKC_Accessories = GE-AX- | 3. Монтажні вироби | Невідомий аксесуар
